--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -25,7 +25,7 @@ body {
 
 .inventory_header {
     color: white;
-    font-family: GameFont, Arial, Helvetica, sans-serif;
+    font-family: GameFont, Verdana, Geneva, Tahoma, sans-serif;
 }
   
 .card {
@@ -58,11 +58,13 @@ body {
 }
   
 .card-title {
+    margin-left: 5px;
     padding-top: 5px;
     letter-spacing: 1px;
 }
   
 .casting-cost {
+    margin-right: 5px;
     display: flex;
     gap: 2px;
 }
