Remove unused font file and update font URL in CSS; add migration to alter card image field

--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -9,7 +9,7 @@
   
 @font-face {
     font-family: 'GameFont';
-    src: url('../atarian_font/Atarian/SF\ Atarian\ System\ Extended.ttf');
+    src: url('../atarian_font/Atarian/SF_Atarian_System_Extended.ttf');
 }
 
 * {
