--- a/src/ecoGo/static/css/footer.css
+++ b/src/ecoGo/static/css/footer.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'GameFont';
-    src: url('../atarian_font/Atarian/SF\ Atarian\ System\ Extended.ttf');
+    src: url('../atarian_font/Atarian/SF_Atarian_System_Extended.ttf');
 }
 
 #footer {
