--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -6,10 +6,10 @@
     --inner-borders-color: #bd4129;
     --inner-borders-thickness: 3px;
 }
-  
+
 @font-face {
     font-family: 'GameFont';
-    src: url('../atarian_font/Atarian/SF_Atarian_System_Extended.ttf');
+    src: url('../../atarian_font/Atarian/SF_Atarian_System_Extended.ttf');
 }
 
 * {
