--- a/src/apps/user/templates/user/shop.html
+++ b/src/apps/user/templates/user/shop.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% load static %}
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/css/page.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
     <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
-    <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_container.css' %}">
-    <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_grid.css' %}">
+    <link rel="stylesheet" href="{% static '/css/shop_files/shop_container.css' %}">
+    <link rel="stylesheet" href="{% static '/css/shop_files/shop_grid.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="{% static '/css/normalise.css' %}">
     <link rel="icon" href="data:,">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Shop</title>
 </head>
 <body>
@@ -48,34 +47,37 @@
         <div class="main p-3">
             <div class="shop_header">
                 <div class="centered">
-                    <h1> Shop </h1>
+                    <h1> Pack Shop </h1>
+                    <div class="w3-container w3-center w3-animate-center">
+                        <div class="text-box">
+                            <p>Purchase packs using points obtained from selling cards</p>
+                        </div>
+                    </div>
                     <p>
-                        Browse and purchase packs.
+                        You currently have <strong>{{ points }}</strong> points.
                     </p>
                 </div>
             </div>
-            {% if cards %}
-                <ul class="card-grid">
-                    {% for card in cards %}
+            {% if packs %}
+                <ul class="pack-grid">
+                    {% for pack in packs %}
                     <li>
-                        <div class="card">
+                        <!-- Implement for packs in some way-->
+                        <div class="pack">
                             <div class="bar bar-top">
-                                <div class="card-title">{{ card.card_name }}</div>
+                                <div class="pack-title" style="font-family: GameFont, Arial, Helvetica, sans-serif">{{ pack.pack_name }}</div>
                             </div>
-                            <div class="card-image">
-                                <img src= "{% static card.image_path %}" alt="card image">
+                            <div class="pack-image">
+                                <img src= "{% static pack.image_path %}" alt="pack image">
                             </div>
-                                <div class="bar bar-mid">
-                                    <div class="card-title">Instant</div>
-                                </div>
-                            <div class="card-text">
-                                <div class="card-ability">
-                                    {{card.card_desc}}
-                                </div>
+                            <div class="pack-description">
+                                <p>{{ pack.description }}</p> <!-- Depends if we need this I dunno -->
+                            </div>
+                            <div class="pack-price">
+                                <p>{{ pack.cost }}</p> 
                             </div>
                             <div class="footer">
-                                <div class="author">Created by Breadscrums.</div>
-                                <button class="btn btn-primary">Buy</button>
+                                <button type="button" class="btn btn-success btn-lg mb-3" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 40px; height: 50px; width: 100px; font-size: 25px;" onclick="window.location.href='login';">Buy</button>
                             </div>
                         </div>
                     </li>
@@ -83,12 +85,15 @@
                 </ul>
             {% else %}
                 <div class="shop_header">
-                    <h1>Shop</h1>
                     <p>
                         No packs available for purchase...
                     </p>
                 </div>
             {% endif %}
+            </div>
+            <div class = "points-box">
+                <p><strong>Level: {{ level }}</strong></p>
+                <p><strong>{{ points }} points.</strong></p>
             </div>
         </div>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
