--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -66,6 +66,7 @@
                 <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" disabled>Trading</button>
                 <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="window.location.href='user/inventory';" >Inventory</button>
                 <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" disabled>Leaderboard</button> 
+                <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="window.location.href='shop';" >Shop</button>
             </div>
         </div>
     </div>
