--- a/src/ecoGo/static/css/shop_files/shop_container.css
+++ b/src/ecoGo/static/css/shop_files/shop_container.css
@@ -14,7 +14,7 @@
     text-align: center;
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #007bff;
+    background-color: #fff;
     color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -76,7 +76,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #fff;
     color: #fff;
     text-align: center;
 }
@@ -96,7 +96,7 @@
     padding: 10px;
     font-size: 1.2rem;
     font-weight: bold;
-    color: #007bff;
+    color: #fff;
     text-align: center;
 }
 
@@ -104,21 +104,6 @@
     padding: 10px;
     text-align: center;
 }
-
-.footer .btn {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.footer .btn:hover {
-    background-color: #0056b3;
-}
-
 
 .points-box {
     position: fixed;
