--- a/src/apps/user/templates/user/leaderboard.html
+++ b/src/apps/user/templates/user/leaderboard.html
@@ -7,7 +7,7 @@
     <h1>Leaderboard</h1>
     <ul>
         {% for user in top_10_users %}
-            <li>{{ user.user.username }} - {{ user.points }} Points</li>
+            <li>{{ user.username}} {{ user.level }} Level</li>
         {% endfor %}
     </ul>
 </body>
