--- a/src/apps/user/templates/user/shop.html
+++ b/src/apps/user/templates/user/shop.html
@@ -59,25 +59,25 @@
                 </div>
             </div>
             {% if packs %}
-                <ul class="pack-grid">
+                <ul class="pack_grid">
                     {% for pack in packs %}
                     <li>
                         <!-- Implement for packs in some way-->
                         <div class="pack">
                             <div class="bar bar-top">
-                                <div class="pack-title" style="font-family: GameFont, Arial, Helvetica, sans-serif">{{ pack.pack_name }}</div>
+                                <div class="pack_title">
+                                    <p>{{ pack.pack_name }}</p>
+                                </div>
                             </div>
-                            <div class="pack-image">
+                            <div class="pack_image">
                                 <img src= "{% static pack.image_path %}" alt="pack image">
                             </div>
-                            <div class="pack-description">
-                                <p>{{ pack.description }}</p> <!-- Depends if we need this I dunno -->
-                            </div>
-                            <div class="pack-price">
-                                <p>{{ pack.cost }}</p> 
-                            </div>
                             <div class="footer">
-                                <button type="button" class="btn btn-success btn-lg mb-3" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 40px; height: 50px; width: 100px; font-size: 25px;" onclick="window.location.href='login';">Buy</button>
+                                <div class="pack_price">
+                                    <p>Cost: {{ pack.cost }}</p> 
+                                </div>
+                                <button type="button" class="buy_button" onclick="window.location.href='{% url 'homepage' %}';">Buy</button>
+
                             </div>
                         </div>
                     </li>
@@ -93,7 +93,7 @@
             </div>
             <div class = "points-box">
                 <p><strong>Level: {{ level }}</strong></p>
-                <p><strong>{{ points }} points.</strong></p>
+                <p><strong>Points: {{ points }}</strong></p>
             </div>
         </div>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
