--- a/src/ecoGo/static/css/shop_files/shop_container.css
+++ b/src/ecoGo/static/css/shop_files/shop_container.css
@@ -1,10 +1,9 @@
-
 /* General container styling */
 .shop_container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #28a745;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -12,27 +11,11 @@
 .shop_header {
     font-family: 'GameFont', Arial, Helvetica, sans-serif;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
     padding: 20px;
-    background-color: #fff;
     color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
     overflow: hidden;
-}
-
-.shop_header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-    background-size: 50px 50px;
-    z-index: 1;
-    pointer-events: none;
 }
 
 .shop_header h1 {
@@ -49,71 +32,23 @@
     position: relative;
 }
 
-/* Pack grid styling */
-.pack_grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-
-.pack {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 300px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.pack:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.pack_title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 10px;
-    background-color: #fff;
-    color: #fff;
-    text-align: center;
-}
-
-.pack_image img {
-    width: 100%;
-    height: auto;
-}
-
-.pack_description {
-    padding: 10px;
-    font-size: 1rem;
-    color: #333;
-}
-
-.pack_price {
-    padding: 10px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-}
-
 .footer {
-    padding: 10px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px; 
 }
 
 .points-box {
     position: fixed;
     top: 20px;
     right: 20px;
-    background-color: #007bff;
+    background-color: #8B4513;
     color: #fff;
     padding: 10px 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 3px solid #4a280f ;
     z-index: 1000;
     font-family: 'Arial', sans-serif;
     font-size: 1rem;
