--- a/src/apps/gamemaster/templates/gamemaster_dashboard.html
+++ b/src/apps/gamemaster/templates/gamemaster_dashboard.html
@@ -22,8 +22,8 @@
                     <form method="post">
                         {% csrf_token %}
                         {{ website_form.as_p }}
-                        <input type="hidden" id="id_location_lat" name="location_lat">
-                        <input type="hidden" id="id_location_lon" name="location_lon">
+                        <title>Choose Location</title>
+                        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
                         <div id="map" style="height: 400px; width: 100%;"></div>
 
                         <button type="submit" class="btn btn-primary w-100" name="create_website">Create Website</button>
@@ -68,31 +68,18 @@
     </div>
 
 </div>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-    // Initialize the Leaflet map
-    var map = L.map('map').setView([51.505, -0.09], 13);  // Default position, change as needed
+    var map = L.map('map').setView([51.505, -0.09], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-    // Add OpenStreetMap tile layer
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+    var marker = L.marker([51.505, -0.09], {draggable: true}).addTo(map);
 
-    // Add a marker on click and update hidden input fields for latitude and longitude
-    var marker;
-    map.on('click', function(e) {
-        var lat = e.latlng.lat;
-        var lon = e.latlng.lng;
-
-        // Update the marker position and add it to the map
-        if (marker) {
-            marker.setLatLng([lat, lon]);
-        } else {
-            marker = L.marker([lat, lon]).addTo(map);
-        }
-
-        // Set hidden inputs for latitude and longitude
-        document.getElementById('id_location_lat').value = lat;
-        document.getElementById('id_location_lon').value = lon;
+    marker.on('dragend', function(event){
+        var position = marker.getLatLng();
+        console.log("Latitude: " + position.lat + ", Longitude: " + position.lng);
+        document.getElementById('id_latitude').value = position.lat;
+        document.getElementById('id_longitude').value = position.lng;
     });
 </script>
 {% endblock %}
