--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -33,22 +33,14 @@ body {
     flex: 1 1 calc(25% - 16px);
     width: 300px;
     height: 418px;
-    margin-left: 30px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     box-shadow: inset 0 0 0 var(--card-border-thickness) var(--card-border-color);
     border-radius: var(--card-border-radius);
     padding: var(--card-border-thickness);
 }
-
-ul:hover .card {
-    opacity: 0.5;
-    transition: opacity .5s ease-in-out;
-}
-
-ul:hover .card:hover {
-    opacity: 1;
-    transition: opacity .5s ease-in-out;
-}
-
+  
 .bar {
     display: flex;
     justify-content: space-between;
