Add styling for inventory header: set font and color for header text

--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -27,6 +27,11 @@ body {
     color: white;
     font-family: GameFont, Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.inventory_header h1 {
+    color: white;
+    font-family: GameFont, Verdana, Geneva, Tahoma, sans-serif;
+}
   
 .card {
     position: absolute;
