--- a/src/apps/cards/templates/cards/display_card.html
+++ b/src/apps/cards/templates/cards/display_card.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static '/css/pack_opening/pack_opening.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_container.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_grid.css' %}">
+    <link rel="stylesheet" href="{% static '/css/pack_opening/pack_opening.css' %}">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>{{ card_name }}</title>
@@ -33,9 +34,9 @@
                         <div class="card-image">
                             <img src= "{% static card.image_path %}" alt="card image">
                         </div>
-                            <div class="bar bar-mid">
-                                <div class="card-title">Instant</div>
-                            </div>
+                        <div class="bar bar-mid">
+                            <div class="card-title">Instant</div>
+                        </div>
                         <div class="card-text">
                             <div class="card-ability">
                                 {{card.card_desc}}
