--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -58,24 +58,29 @@
                 <ul class="card-grid">
                     {% for card in cards %}
                     <li>
-                        <div class="card">
-                            <div class="bar bar-top">
-                                <div class="card-title">{{ card.card_name }}</div>
-                                <div class="casting-cost">{{ card.value }}</div>
-                            </div>
-                            <div class="card-image">
-                                <img src= "{% static card.image_path %}" alt="card image">
-                            </div>
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="bar bar-top">
+                                    <div class="card-title">{{ card.card_name }}</div>
+                                    <div class="casting-cost">{{ card.value }}</div>
+                                </div>
+                                <div class="card-image">
+                                    <img src= "{% static card.image_path %}" alt="card image">
+                                </div>
                                 <div class="bar bar-mid">
                                     <div class="card-title">Instant</div>
                                 </div>
-                            <div class="card-text">
-                                <div class="card-ability">
-                                    {{card.card_desc}}
+                                <div class="card-text">
+                                    <div class="card-ability">
+                                        {{card.card_desc}}
+                                    </div>
+                                </div>
+                                <div class="footer">
+                                    <div class="author">Created by Breadscrums.</div>
                                 </div>
                             </div>
-                            <div class="footer">
-                                <div class="author">Created by Breadscrums.</div>
+                            <div class="centered">
+                                <button class="sell-button"><img src="{% static '/photos/coin-xp.gif' %}"></button>
                             </div>
                         </div>
                     </li>
