Display user points in inventory page

--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -52,6 +52,9 @@
                     <p>
                         All of the cards collected by {{ user.username }}.
                     </p>
+                    <p>
+                        {{ user.username }} has {{ user_data.points }}
+                    </p>
                 </div>
             </div>
             {% if cards %}
