--- a/src/apps/user/templates/user/leaderboard.html
+++ b/src/apps/user/templates/user/leaderboard.html
@@ -10,8 +10,73 @@
 </head>
 
 <body>
-
-
-    
+    <table border="1" cellspacing="0" cellpadding="5">
+        <tr>
+            <th>Rank</th>
+            <th>Username</th>
+            <th>Level</th>
+            <th>XP</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>PlayerOne</td>
+            <td>50</td>
+            <td>5000</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>EcoMaster</td>
+            <td>48</td>
+            <td>4800</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>GreenWarrior</td>
+            <td>46</td>
+            <td>4600</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>NatureKing</td>
+            <td>44</td>
+            <td>4400</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>RecyclingHero</td>
+            <td>42</td>
+            <td>4200</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>SolarSavior</td>
+            <td>40</td>
+            <td>4000</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>WindWarrior</td>
+            <td>38</td>
+            <td>3800</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>OceanGuardian</td>
+            <td>36</td>
+            <td>3600</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>EcoExplorer</td>
+            <td>34</td>
+            <td>3400</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>PlantProtector</td>
+            <td>32</td>
+            <td>3200</td>
+        </tr>
+    </table>
 </body>
 </html>
