--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -62,7 +62,7 @@
                             <div class="card">
                                 <div class="bar bar-top">
                                     <div class="card-title">{{ card.card_name }}</div>
-                                    <div class="casting-cost">{{ card.value }}</div>
+                                    <div class="casting-cost">{{ card.value }} {{ card.quant }}</div>
                                 </div>
                                 <div class="card-image">
                                     <img src= "{% static card.image_path %}" alt="card image">
@@ -80,7 +80,10 @@
                                 </div>
                             </div>
                             <div class="centered">
-                                <button class="sell-button"><img src="{% static '/photos/coin-xp.gif' %}"></button>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <button class="sell-button" onclick="sell_button(this)"><img src="{% static '/photos/coin-xp.gif' %}"></button>
+                                </form>
                             </div>
                         </div>
                     </li>
@@ -99,5 +102,6 @@
         </div>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
+    <script src="{% static 'js/sell_button.js' %}"></script>
 </body>
 </html>
