--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -82,6 +82,7 @@
                             <div class="centered">
                                 <form method="POST">
                                     {% csrf_token %}
+                                    <input hidden="true" name="card_name" value="{{ card.card_name }}">
                                     <button class="sell-button" onclick="sell_button(this)"><img src="{% static '/photos/coin-xp.gif' %}"></button>
                                 </form>
                             </div>
